# lrcalc

./: .gitignore  CMakeLists.txt  Cargo.toml  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  lrcalc.maple.src  testsuite  testsuite.ps1  testsuite.sh
.github/workflows/: rust.yml
cmake/: Config.cmake.in  utils.cmake
include/lrcalc/: alloc.hpp  cpp_lib.hpp  hashtab.tpl.hpp  ilist.hpp  ivector.hpp  ivlincomb.hpp  ivlist.hpp  list.tpl.hpp  lrcoef.hpp  lriter.hpp  maple.hpp  optshape.hpp  part.hpp  perm.hpp  schublib.hpp  schur.hpp  vectarg.hpp  vector.tpl.hpp
lrcalc_helper/: Cargo.toml
lrcalc_helper/src/: ivector.rs  ivlincomb.rs  ivlist.rs  lib.rs  lrcoef.rs  lriter.rs  optim.rs  part.rs  perm.rs  schublib.rs  schur.rs
oomtest/: oomsuite.sh  oomtest.sh
python/: .gitignore  Cargo.toml  README.Python  README.md  liblrcalc.pxd  lrcalc.pyi  lrcalc.pyx  pyproject.toml  setup.py  test.py
python/lrcalc/: __init__.py
python/src/: lib.rs
python/tests/: test.py
rust/: .gitignore  Cargo.toml  README.md
rust/lrcalc_helper/: Cargo.toml
rust/lrcalc_helper/src/: ivector.rs  ivlincomb.rs  ivlist.rs  lib.rs  lrcoef.rs  lriter.rs  optim.rs  part.rs  perm.rs  schublib.rs  schur.rs
rust/lrcalc_system/: Cargo.toml
rust/lrcalc_system/src/: lib.rs  wrapper.hpp
rust/python/: .gitignore
rust/python/src/: lib.rs
rust/src/: allstrings.rs  main.rs  schubmult.rs  wrapper.h  wrapper.hpp
rust/src/lrcalc/: func.rs  ivector.rs  ivlist.rs  lincomb.rs  lriter.rs  mod.rs  part.rs
rust/src/lrcalc/tests/: mod.rs  test_fusion.rs  test_lrcoef.rs  test_lrmult.rs  test_lrskew.rs  test_partiter.rs  test_schubmult.rs
src/: .gitignore  Makefile.am  Makefile.in  alloc.c  alloc.cpp  alloc.h  allparts.c  allparts.cpp  allparts.rs  allperms.c  allperms.cpp  allperms.rs  allstrings.c  allstrings.cpp  allstrings.rs  hashtab.tpl.c  hashtab.tpl.cpp  hashtab.tpl.h  ilist.c  ilist.cpp  ilist.h  ivector.c  ivector.cpp  ivector.h  ivlincomb.c  ivlincomb.cpp  ivlincomb.h  ivlist.c  ivlist.cpp  ivlist.h  list.tpl.c  list.tpl.cpp  list.tpl.h  lrcalc.c  lrcalc.cpp  lrcalc.rs  lrcoef.c  lrcoef.cpp  lrcoef.h  lriter.c  (+41 more)
src/lrcalc/: func.rs  ivector.rs  ivlincomb.rs  ivlist.rs  lincomb.rs  lrcoef.rs  lriter.rs  mod.rs  optim.rs  part.rs  perm.rs  schublib.rs  schur.rs
src/lrcalc/helper/: ivector.rs  lrcoef.rs  mod.rs  optim.rs  part.rs  schur.rs
src/lrcalc/tests/: mod.rs  test_fusion.rs  test_lrcoef.rs  test_lrmult.rs  test_lrskew.rs  test_partiter.rs  test_schubmult.rs
