[package]
name = "lrcalc"
version = "2.1.0"
authors = ["selpo <planet_selpo@yahoo.co.jp>"]
edition = "2018"

[lib]
name = "lrcalc"
path = "src/lrcalc/mod.rs"

[[bin]]
name = "allparts"
path = "src/allparts.rs"

[[bin]]
name = "allperms"
path = "src/allperms.rs"

[[bin]]
name = "allstrings"
path = "src/allstrings.rs"

[[bin]]
name = "lrcalc"
path = "src/lrcalc.rs"

[[bin]]
name = "schubmult"
path = "src/schubmult.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "=3.0.0-beta.2"
hashbrown = "0.11.2"
lrcalc_helper = { path="lrcalc_helper" }
