[package]
name = "lrcalc-python"
version = "2.0.0"
authors = ["selpo <planet_selpo@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lrcalc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lrcalc_helper = { path="../lrcalc_helper" }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
