[package]
name = "lrcalc"
version = "0.1.0"
authors = ["selpo <planet_selpo@yahoo.co.jp>"]
edition = "2018"

[lib]
name = "lrcalc"
path = "src/lrcalc/mod.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
